--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -18,6 +18,7 @@
     "import glob\n",
     "import time\n",
     "from datetime import datetime\n",
+    "import time\n",
     "import pandas as pd\n",
     "import selenium\n",
     "from selenium import webdriver\n",
